try to fix overlap text

--- a/portfolio/static/css/index.css
+++ b/portfolio/static/css/index.css
@@ -668,8 +668,13 @@ footer small {
         height: calc(150vh - 100px);
         margin-bottom: 1em;
     }
-    .work-container {
+    .work-wrap {
         margin-top: 5em;
+    }
+    #section2-title {
+        font-size: larger;
+        position: relative;
+        z-index: 999;
     }
 }
 @media only screen and (max-width: 376px) and (max-height: 668px) {
